# RoboCupSim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Config/: CMakeLists.txt  Transformation.cpp
apps/: CMakeLists.txt  Main.cpp
cfg/include/: SystemConfig.h  Transformation.h
cfg/src/: Dimensions.cpp
libs/: CMakeLists.txt
libs/Ball/: CMakeLists.txt
libs/Ball/demo/: CMakeLists.txt  main.cpp
libs/Ball/include/: ball.h
libs/Ball/src/: ball.cpp
libs/Controller/: CMakeLists.txt
libs/Controller/include/: Game.h
libs/Controller/src/: Game.cpp  PlayerControls.cpp
libs/Est/: CMakeLists.txt  demo.cpp
libs/Est/include/: KF.h
libs/Est/src/: KF.cpp  demo.cpp
libs/HardwareManager/: CMakeLists.txt
libs/HardwareManager/include/: Sensor.h
libs/HardwareManager/src/: Sensor.cpp
libs/KF/include /: KF.h
libs/KF/src/: KF.cpp
libs/Kin/: CMakeLists.txt
libs/Kin/include/: Fwd.h  Inv.h  inv.h
libs/Kin/src/: Fwd.cpp  Inv.cpp
libs/Physics/: CMakeLists.txt
libs/Physics/include/: Collision.h  Collisions.h  playerCollision.h  playerCollisions.h
libs/Physics/src/: Collision.cpp  playerCollision.cpp
libs/Player/: CMakeLists.txt
libs/Player/include/: playerManager.h
libs/Player/src/: playerManager.cpp
libs/Trajectory/: CMakeLists.txt
libs/Trajectory/include/: TrapezoidalTrajectory.h  TrapoizdalTragectory.h
libs/Trajectory/src/: TrapezoidalTrajectory.cpp  TrapoizdalTragectory.cpp
libs/UI/: CMakeLists.txt
libs/UI/demo/: CMakeLists.txt  main.cpp
libs/UI/include/: Players.h  Robotstats.h  dropDownUI.h  generate_UI.h  players.h  playingField.h
libs/UI/src/: Players.cpp  Robotstats.cpp  dropDownUI.cpp  generate_UI.cpp  players.cpp  playingField.cpp
libs/Util/: CMakeLists.txt
libs/Util/include/: playerUtil.h
libs/Util/src/: playerUtil.cpp
libs/cfg/: CMakeLists.txt
libs/cfg/include/: Transformation.h  dimensions.h  systemConfig.h  transformation.h
libs/cfg/src/: SystemConfig.cpp  Transformation.cpp  dimensions.cpp  systemConfig.cpp  transformation.cpp
libs/config/: CMakeLists.txt  Transformation.cpp
